--- a/tacontigo-web/src/footer.css
+++ b/tacontigo-web/src/footer.css
@@ -60,9 +60,11 @@
   }
 
   .footer-note-container {
-    margin-left: 120px;
+    margin-left: 0;
+    margin-right: 0;
     font-size: medium;
-    width: 200px;
-    margin-top: -10px;
+    width: 100%;
+    margin-top: 10px;
+    text-align: center;
   }
 }
